--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 body {
   background-color: #151515;
   color: #e6e6e6;
+  height: 100vh;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 a {
   color: inherit;
